Fixed contrast on overlays.

--- a/app/javascript/styles/chillstep/diff.scss
+++ b/app/javascript/styles/chillstep/diff.scss
@@ -50,3 +50,15 @@ body {
 .columns-area__panels {
     background-color: #151515;
 }
+
+.relationship-tag {
+    color: $dark-text-color;
+}
+
+.spoiler-button__overlay__label {
+    color: $dark-text-color;
+}
+
+.icon-button.overlayed {
+    color: $dark-text-color;
+}
