--- a/app/javascript/styles/dx7/diff.scss
+++ b/app/javascript/styles/dx7/diff.scss
@@ -107,3 +107,15 @@ body {
   border-bottom: 2px solid lighten($ui-base-color, 20%);
   border-top: 2px solid darken($ui-base-color, 40%);
 }
+
+.relationship-tag {
+  color: $dark-text-color;
+}
+
+.spoiler-button__overlay__label {
+  color: $dark-text-color;
+}
+
+.icon-button.overlayed {
+  color: $dark-text-color;
+}
